Integrate Goatcounter for analytics tracking
Added Goatcounter script for tracking.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <meta name="keyword" content="music platform, artist promotion, record lebel promotion, free music playlisting, music playlisting platform, artist forum, music forum">
     <meta name="author" content="colony core">
     <meta name="robots" content="index, follow">
+    <!-- Goatcounter -->
+    <script data-goatcounter="https://offixial.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
     
      <!-- ========== OPEN GRAPH (Facebook, LinkedIn, WhatsApp) ========== -->
  <meta property="og:title" content="Planet Play | Music Aggregation Platform">
