--- a/Assets/Subpage/submit.html
+++ b/Assets/Subpage/submit.html
@@ -15,6 +15,9 @@
     <style>
      
     </style>
+    <!-- Goatcounter -->
+    <script data-goatcounter="https://offixial.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
 </head>
 <body>
     <!-- Header -->
