--- a/Assets/Subpage/community/com/newsfeed.html
+++ b/Assets/Subpage/community/com/newsfeed.html
@@ -6,6 +6,9 @@
     <title>Billboard | Planet Play</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="/Assets/css/newsfeed.css">
+    <!-- Goatcounter -->
+    <script data-goatcounter="https://offixial.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
     <link href="/Assets/image/logo/20240428_221650.png" rel="icon">
     <link rel="apple-touch-icon" href="/Assets/image/logo/20240428_221650.png">
     <style>
