--- a/Assets/ backend/dashboard.html
+++ b/Assets/ backend/dashboard.html
@@ -235,7 +235,7 @@
                         <a href="#" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
                     </div>
                 </div>
-                <div class="footer-section">
+             <!--   <div class="footer-section">
                     <h3>Quick Links</h3>
                     <ul class="footer-links">
                         <li><a href="index.html">Home</a></li>
@@ -244,7 +244,7 @@
                         <li><a href="artists.html">Artists</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
-                </div>
+                </div> -->
                 <div class="footer-section">
                     <h3>Artist Resources</h3>
                     <ul class="footer-links">
@@ -254,18 +254,47 @@
                         <li><a href="#">API Documentation</a></li>
                     </ul>
                 </div>
-                <div class="footer-section">
-                    <h3>Contact Us</h3>
+<div class="footer-section">
+                    <h3>Quick Links</h3>
                     <ul class="footer-links">
-                        <li>Email: support@planetplay.com</li>
-                        <li>Phone: +1 (555) 123-4567</li>
-                        <li>Address: 123 Music Ave, Sound City</li>
+                        <li><a href="/index.html">Home</a></li>
+                        <li><a href="/Assets/Subpage/platforms.html">Platforms</a></li>
+                        <li><a href="/Assets/Subpage/playlist.html">Playlists</a></li>
+                        <li><a href="/Assets/Subpage/artist-lebel.html">Artists</a></li>
+                        <li><a href="/Assets/Subpage/news.html">Community</a></li>
+                        <li><a href="/Assets/Subpage/contact.html">Contact</a></li>
                     </ul>
                 </div>
+          <!--      <div class="footer-section">
+                    <h3>Platforms</h3>
+                    <ul class="footer-links">
+                        <li><a href="#">Spotify</a></li>
+                        <li><a href="#">Apple Music</a></li>
+                        <li><a href="#">Deezer</a></li>
+                        <li><a href="#">Tidal</a></li>
+                        <li><a href="#">SoundCloud</a></li>
+                        <li><a href="#">YouTube Music</a></li>
+                        <li><a href="#">Boomplay</a></li>
+                        <li><a href="#">Audiomax</a></li>
+                    </ul>
+                </div> -->
+                <div class="footer-section">
+    <h3>Contact Us</h3>
+    <ul class="footer-links">
+        <li><a href="mailto:iamoffixial@gmail.com?subject=Inquiry from planet play">Email Us</a></li>
+        <li><a href="tel:+2349026394593">Call Us</a></li>
+        <li>
+            <a href="/Assets/Extra/about.1.html">About Us</a>
+        </li>
+        <!--   <li>Address: 123 Music Ave, Sound City</li> -->
+    </ul>
+</div>
             </div>
-            <div class="copyright">
-                <p>&copy; 2023 Planet Play. All rights reserved.</p>
-            </div>
+      <div class="copyright">
+          <p><a href="mailto:iamoffixial@gmail.com?subject=Report/suggesion from planetplay website" target="_blank">FEEDBACK</a></p>
+    <p>powered by: <span class="colony" style="color: dodgerblue; text-decoration: underline;font-weight: bolder;"><a href="#">COLONY CORE</a></span></p>
+    <p>&copy; <span id="year"></span> planet play. All rights reserved.</p>
+</div>
         </div>
     </footer>
     
@@ -352,5 +381,6 @@
         });
     </script>
     <script src="/Assets/pageloader/loader-all-in-one.js"></script>
+    <script src="/Assets/js/year.js"></script>
 </body>
 </html>
