--- a/Assets/Subpage/submit.html
+++ b/Assets/Subpage/submit.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="keyword" content="">
+    <!-- Goatcounter -->
+    <script data-goatcounter="https://offixial.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
     <title>Submit Music | Planet Play</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="/Assets/css/submit.CSS">
@@ -15,9 +18,6 @@
     <style>
      
     </style>
-    <!-- Goatcounter -->
-    <script data-goatcounter="https://offixial.goatcounter.com/count"
-        async src="//gc.zgo.at/count.js"></script>
 </head>
 <body>
     <!-- Header -->
@@ -198,19 +198,18 @@
                         <a href="#" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
                     </div>
                 </div>
-                <div class="footer-section">
+<div class="footer-section">
                     <h3>Quick Links</h3>
                     <ul class="footer-links">
                         <li><a href="/index.html">Home</a></li>
                         <li><a href="/Assets/Subpage/platforms.html">Platforms</a></li>
                         <li><a href="/Assets/Subpage/playlist.html">Playlists</a></li>
                         <li><a href="/Assets/Subpage/artist-lebel.html">Artists</a></li>
-                        <li><a href="/Assets/Subpage/billboard.html">Billboard</a></li>
-                        <li><a href="/Assets/Subpage/submit-music.html" class="active">Submit Music</a></li>
+                        <li><a href="/Assets/Subpage/news.html">Community</a></li>
                         <li><a href="/Assets/Subpage/contact.html">Contact</a></li>
                     </ul>
                 </div>
-                <div class="footer-section">
+          <!--      <div class="footer-section">
                     <h3>Platforms</h3>
                     <ul class="footer-links">
                         <li><a href="#">Spotify</a></li>
@@ -222,18 +221,24 @@
                         <li><a href="#">Boomplay</a></li>
                         <li><a href="#">Audiomax</a></li>
                     </ul>
-                </div>
+                </div> -->
                 <div class="footer-section">
-                    <h3>Contact Us</h3>
-                    <ul class="footer-links">
-                        <li>Email: planetplay.inc@gmail.com</li>
-                        <li>Phone: +234 9026394593</li>
-                    </ul>
-                </div>
+    <h3>Contact Us</h3>
+    <ul class="footer-links">
+        <li><a href="mailto:iamoffixial@gmail.com?subject=Inquiry from planet play">Email Us</a></li>
+        <li><a href="tel:+2349026394593">Call Us</a></li>
+        <li>
+            <a href="/Assets/Extra/about.1.html">About Us</a>
+        </li>
+        <!--   <li>Address: 123 Music Ave, Sound City</li> -->
+    </ul>
+</div>
             </div>
-            <div class="copyright">
-                <p>&copy; 2023 Colony core. All rights reserved.</p>
-            </div>
+<div class="copyright">
+    <p><a href="mailto:iamoffixial@gmail.com?subject=Report/suggesion from planetplay website" target="_blank">FEEDBACK</a></p>
+    <p>powered by: <span class="colony" style="color: dodgerblue; text-decoration: underline; font-weight: bolder;"><a href="#">COLONY CORE</a></span></p>
+    <p>&copy; <span id="year"></span> planet play. All rights reserved.</p>
+</div>
         </div>
     </footer>
     
@@ -288,5 +293,6 @@
         });
     </script>
     <script src="/Assets/pageloader/loader-all-in-one.js"></script>
+    <script src="/Assets/js/year.js"></script>
 </body>
 </html>
